src/parser/snapshots/monkey_language_server__parser__test__if_expr_unhappy_4.snap
---
source: src/parser/test.rs
description: "if (x) { let x = 1"
expression: result
---
[
    If {
        token: Token(If, "if", (0,0)->(0,2)),
        condition: Ok(
            Identifier {
                token: Token(Identifier, "x", (0,4)->(0,5)),
                name: "x",
            },
        ),
        consequence: Err(
            Err(UnexpectedEof("SyntaxError: Unexpected eof."), (0,17)->(0,18)),
        ),
        alternative: Ok(
            None,
        ),
    },
]

===================================

if (x) { let x = 1
                 ^ [Error] SyntaxError: Unexpected eof.
